# cd3-conan-packages

./: .gitignore  Makefile  Pipfile  README.md  export-packages.py  export-recipes.py  install.py  pyproject.toml
.dev/: run-package-tests.py
.dev/scripts/: monitor-and-export.sh
00-scripts/: export-packages.py  test-packages.py
01-configurations/: masters.yaml  new-format.yaml  releases.yaml  snapshot.yaml  win-releases.yaml
UnitConvert/: conanfile-v0.5.1.py  conanfile-v0.5.2.py  conanfile.py
UnitConvert/test_package/: CMakeLists.txt  conanfile.py  example.cpp  test.sh
UnitConvertGui_installer/: conanfile.py
dakota_installer/: conanfile.py
doc/example/: demo.sh  setup.sh
experiment/: README.md
experiment/tooling/: README.md
libArrhenius/: conanfile.py
libArrhenius/test_package/: conanfile.py
libField/: conanfile.py
libField/test_package/: conanfile.py
libGBP/: conanfile.py
libGBP/test_package/: conanfile.py  example.cpp
libIntegrate/: conanfile.py
libIntegrate/test_package/: conanfile.py  example.cpp
libInterpolate/: conanfile.py
libInterpolate/test_package/: CMakeLists.txt  conanfile.py  example.cpp
recipes-devel/UnitConvertGui_installer/: conanfile.py
recipes-v1/UnitConvert/: config.yml
recipes-v1/WasmUnitConvert/: conanfile.py
recipes-v1/gp-utils/: conanfile.py
recipes-v1/hdf5/: conanfile.py
recipes-v1/libField/: config.yml
recipes-v1/libGBP/: config.yml
recipes-v1/libIntegrate/: conanfile.py
recipes-v1/libInterpolate/: config.yml
recipes-v1/libuncertainty/: config.yml
utils/: test-recipes.py
(+84 files in other folders)
